--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,11 @@ server:
 spring:
   application:
     name: "Services service"
+
+logging:
+  level:
+    web: debug
+
+logback:
+  access:
+    enabled: true
